Simplified and cleaned up the A* example

--- a/game.project
+++ b/game.project
@@ -1,16 +1,16 @@
 [project]
-title = My project
+title = DefoldExamples
 version = 0.1
 
 [bootstrap]
-main_collection = /main/main.collectionc
+main_collection = /main/astar/main.collectionc
 
 [input]
 game_binding = /input/game.input_bindingc
 
 [display]
-width = 1280
-height = 720
+width = 800
+height = 600
 
 [physics]
 scale = 0.02
