--- a/game.project
+++ b/game.project
@@ -3,7 +3,8 @@ title = DefoldExamples
 version = 0.1
 
 [bootstrap]
-main_collection = /main/astar/main.collectionc
+main_collection = /main/dialog/main.collectionc
+render = /main/render/custom.renderc
 
 [input]
 game_binding = /input/game.input_bindingc
@@ -17,4 +18,8 @@ scale = 0.02
 
 [script]
 shared_state = 1
+
+[graphics]
+default_texture_min_filter = nearest
+default_texture_mag_filter = nearest
 
