--- a/game.project
+++ b/game.project
@@ -3,15 +3,17 @@ title = DefoldExamples
 version = 0.1
 
 [bootstrap]
-main_collection = /main/dialog/main.collectionc
+main_collection = /main/touch/touch.collectionc
 render = /main/render/custom.renderc
 
 [input]
 game_binding = /input/game.input_bindingc
+repeat_delay = 0.01
+repeat_interval = 0.01
 
 [display]
-width = 800
-height = 600
+width = 1024
+height = 768
 
 [physics]
 scale = 0.02
