--- a/game.project
+++ b/game.project
@@ -3,7 +3,7 @@ title = DefoldExamples
 version = 0.1
 
 [bootstrap]
-main_collection = /main/bufferparticles/bufferparticles.collectionc
+main_collection = /main/astar/main.collectionc
 render = /main/render/custom.renderc
 
 [input]
